# spark-cassandra-data-source

./: .gitignore  AGENTS.md  README.md  prompt.md  pyproject.toml  pytest.ini
.github/workflows/: onpush.yml
docs/: filter-pushdown.md
docs/plans/: 2025-01-05-phase2-read-operations.md  2025-12-29-phase1-corrections.md  2025-12-29-phase1-write-operations.md  2025-12-29-plan-inconsistencies.md  2025-12-29-pycassandra-design.md
src/cassandra_data_source/: __init__.py  data_source.py  filters.py  partitioning.py  reader.py  schema.py  type_conversion.py  writer.py
tests/: conftest.py  docker-compose.yml  test_filters.py  test_integration.py  test_options.py  test_partitioning.py  test_reader.py  test_schema.py  test_stream_writer.py  test_type_conversion.py  test_writer.py
