[project]
name = "cassandra-data-source"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Ott",email = "alexott@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cassandra-driver>=3.29.3,<4.0.0",
]

[dependency-groups]
dev = [
    "googleapis-common-protos>=1.71.0",
    "grpcio>=1.76.0",
    "grpcio-status>=1.76.0",
    "mypy>=2.1.0,<3.0.0",
    "pyarrow>=24.0.0,<25.0.0",
    "pyspark[connect,sql]==4.1.1",
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "pytest-spark>=0.8.0,<0.9.0",
    "ruff>=0.15.9,<0.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cassandra_data_source"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
